# poard2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Findglad.cmake  Findglfw.cmake  Findglm.cmake  Findstb.cmake  deps.cmake
res/shaders/: shader.frag  shader.vert  skybox.frag  skybox.vert  terrain.comp
src/: camera.cpp  camera.h  imgui_wrapper.cpp  imgui_wrapper.h  input.h  main.cpp  noise.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  terrain_gen.cpp  terrain_gen.h  util.h  window.cpp  window.h
